Don't regenerate links to vote debates.
Rendering the links again as a response to an AJAX request helps keeping
the code DRY. However, it's got disadvantages too:

* Clicking the links using the keyboard behaves in an unusual way.
* Callbacks like "ajax:success" or "ajax:complete" aren't triggered.
* Capybara might click the link while it's being replaced by the AJAX
response, meaning clicking the link will not work properly.

The last point caused a flaky test (see issue #2713).

--- a/app/views/debates/_votes.html.erb
+++ b/app/views/debates/_votes.html.erb
@@ -7,14 +7,14 @@
         <span class="icon-like">
           <span class="show-for-sr"><%= t('votes.agree') %></span>
         </span>
-        <span class="percentage"><%= votes_percentage('likes', debate) %></span>
+        <span class="percentage likes-percentage"><%= votes_percentage('likes', debate) %></span>
       <% end %>
     <% else %>
       <div class="like">
         <span class="icon-like">
           <span class="show-for-sr"><%= t('votes.agree') %></span>
         </span>
-        <span class="percentage"><%= votes_percentage('likes', debate) %></span>
+        <span class="percentage likes-percentage"><%= votes_percentage('likes', debate) %></span>
       </div>
     <% end %>
   </div>
@@ -27,14 +27,14 @@
         <span class="icon-unlike">
           <span class="show-for-sr"><%= t('votes.disagree') %></span>
         </span>
-        <span class="percentage"><%= votes_percentage('dislikes', debate) %></span>
+        <span class="percentage unlikes-percentage"><%= votes_percentage('dislikes', debate) %></span>
       <% end %>
     <% else %>
       <div class="unlike">
         <span class="icon-unlike">
           <span class="show-for-sr"><%= t('votes.disagree') %></span>
         </span>
-        <span class="percentage"><%= votes_percentage('dislikes', debate) %></span>
+        <span class="percentage unlikes-percentage"><%= votes_percentage('dislikes', debate) %></span>
       </div>
     <% end %>
   </div>
